fix(node): 新增发现节点，加入节点接口
